--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,12 @@ h4,
 h5,
 h6 {
   font-family: "Prompt-Medium";
-  color: #6c757d;
+  color: white;
 }
 
 .title {
   font-family: "Prompt-Regular";
-  color: #6c757d;
+  color: white;
 }
 
 body {
